[package]
name = "zino-core"
description = "Core types and traits for zino."
version = "0.25.1"
rust-version = "1.75"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming::http-server"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino-core"
readme = "README.md"

[package.metadata.docs.rs]
features = ["full", "runtime-tokio"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
accessor = ["opendal"]
accessor-azblob = ["accessor", "opendal/services-azblob"]
accessor-azdls = ["accessor", "opendal/services-azdls"]
accessor-cacache = ["accessor", "opendal/services-cacache"]
accessor-cos = ["accessor", "opendal/services-cos"]
accessor-dashmap = ["accessor", "opendal/services-dashmap"]
accessor-dropbox = ["accessor", "opendal/services-dropbox"]
accessor-fs = ["accessor", "opendal/services-fs"]
accessor-gcs = ["accessor", "opendal/services-gcs"]
accessor-gdrive = ["accessor", "opendal/services-gdrive"]
accessor-ghac = ["accessor", "opendal/services-ghac"]
accessor-http = ["accessor", "opendal/services-http"]
accessor-ipfs = ["accessor", "opendal/services-ipfs"]
accessor-ipmfs = ["accessor", "opendal/services-ipmfs"]
accessor-memcached = ["accessor", "opendal/services-memcached"]
accessor-memory = ["accessor", "opendal/services-memory"]
accessor-mini-moka = ["accessor", "opendal/services-mini-moka"]
accessor-moka = ["accessor", "opendal/services-moka"]
accessor-mysql = ["accessor", "opendal/services-mysql"]
accessor-obs = ["accessor", "opendal/services-obs"]
accessor-onedrive = ["accessor", "opendal/services-onedrive"]
accessor-oss = ["accessor", "opendal/services-oss"]
accessor-persy = ["accessor", "opendal/services-persy"]
accessor-postgresql = ["accessor", "opendal/services-postgresql"]
accessor-redb = ["accessor", "opendal/services-redb"]
accessor-redis = ["accessor", "opendal/services-redis"]
accessor-s3 = ["accessor", "opendal/services-s3"]
accessor-sled = ["accessor", "opendal/services-sled"]
accessor-supabase = ["accessor", "opendal/services-supabase"]
accessor-webdav = ["accessor", "opendal/services-webdav"]
accessor-webhdfs = ["accessor", "opendal/services-webhdfs"]
all-accessors = [
    "accessor",
    "accessor-azblob",
    "accessor-azdls",
    "accessor-cacache",
    "accessor-cos",
    "accessor-dashmap",
    "accessor-dropbox",
    "accessor-fs",
    "accessor-gcs",
    "accessor-gdrive",
    "accessor-ghac",
    "accessor-http",
    "accessor-ipfs",
    "accessor-ipmfs",
    "accessor-memcached",
    "accessor-memory",
    "accessor-mini-moka",
    "accessor-moka",
    "accessor-mysql",
    "accessor-obs",
    "accessor-onedrive",
    "accessor-oss",
    "accessor-persy",
    "accessor-postgresql",
    "accessor-redb",
    "accessor-redis",
    "accessor-s3",
    "accessor-sled",
    "accessor-supabase",
    "accessor-webdav",
    "accessor-webhdfs",
]
all-chatbots = ["chatbot", "chatbot-openai"]
all-connectors = [
    "connector",
    "connector-arrow",
    "connector-http",
    "connector-mysql",
    "connector-postgres",
    "connector-sqlite",
]
all-locales = [
    "locale",
    "locale-de",
    "locale-en",
    "locale-es",
    "locale-fr",
    "locale-zh",
]
all-validators = [
    "validator-credit-card",
    "validator-email",
    "validator-phone-number",
    "validator-regex",
]
chatbot = []
chatbot-openai = ["dep:async-openai", "chatbot"]
connector = ["connector-http"]
connector-arrow = ["dep:datafusion", "connector"]
connector-http = ["connector"]
connector-mysql = ["connector", "sqlx", "sqlx/mysql"]
connector-postgres = ["connector", "sqlx", "sqlx/postgres"]
connector-sqlite = ["connector", "sqlx", "sqlx/sqlite"]
cookie = ["dep:cookie", "reqwest/cookies"]
crypto-sm = ["dep:ctr", "dep:sm3", "dep:sm4"]
default = []
dotenv = ["dep:dotenvy"]
env-filter = ["tracing-subscriber/env-filter", "tracing-subscriber/smallvec"]
flume = ["dep:flume"]
full = [
    "all-accessors",
    "all-chatbots",
    "all-connectors",
    "all-locales",
    "all-validators",
    "cookie",
    "dotenv",
    "env-filter",
    "flume",
    "i18n",
    "jwt",
    "metrics",
    "oidc",
    "opa",
    "openapi",
    "orm",
    "sqids",
    "tracing-log",
    "view",
]
http02 = ["dep:http02"]
i18n = ["dep:fluent", "dep:intl-memoizer", "dep:unic-langid"]
jwt = ["dep:jwt-simple", "regorus?/jwt"]
locale = ["random_word"]
locale-en = ["locale", "random_word/en"]
locale-es = ["locale", "random_word/es"]
locale-de = ["locale", "random_word/de"]
locale-fr = ["locale", "random_word/fr"]
locale-zh = ["locale", "random_word/zh"]
metrics = [
    "dep:metrics",
    "dep:metrics-exporter-prometheus",
    "opendal?/layers-metrics",
]
oidc = ["dep:rauthy-client"]
opa = ["regorus"]
openapi = ["dep:utoipa"]
orm = ["orm-sqlx"]
orm-mariadb = ["orm-sqlx", "sqlx/mysql"]
orm-mysql = ["orm-sqlx", "sqlx/mysql"]
orm-postgres = ["orm-sqlx", "sqlx/postgres"]
orm-sqlite = ["orm-sqlx", "sqlx/sqlite"]
orm-sqlx = ["orm", "sqlx", "sqlx/sqlite"]
orm-tidb = ["orm-sqlx", "sqlx/mysql"]
runtime-async-std = ["sqlx?/runtime-async-std"]
runtime-tokio = ["sqlx?/runtime-tokio"]
sentry = ["dep:sentry", "dep:sentry-tracing", "tracing-subscriber"]
tls-native = [
    "reqwest/native-tls",
    "sentry?/native-tls",
    "sqlx?/tls-native-tls",
]
tls-rustls = [
    "reqwest/rustls-tls",
    "sentry?/rustls",
    "sqlx?/tls-rustls",
]
tracing-log = ["dep:tracing-log", "tracing-subscriber/tracing-log"]
tracing-subscriber = ["dep:tracing-appender", "dep:tracing-subscriber"]
validator = []
validator-credit-card = ["validator", "dep:card-validate"]
validator-email = ["validator"]
validator-phone-number = ["validator", "dep:phonenumber"]
validator-regex = ["validator"]
view = ["dep:minijinja"]
view-minijinja = ["view", "dep:minijinja"]
view-tera = ["view", "dep:tera"]

[dependencies]
aes-gcm-siv = "0.11.1"
ahash = "0.8.11"
apache-avro = "0.17.0"
base64 = "0.22.1"
bytes = "1.7.1"
cfg-if = "1.0"
convert_case = "0.6.0"
cron = "0.12.1"
csv = "1.3.0"
etag = "4.0.0"
faster-hex = "0.9.0"
futures = "0.3.30"
hkdf = "0.12.4"
hmac = "0.12.1"
http = "1.1.0"
md-5 = "0.10.6"
mime_guess = "2.0.5"
multer = "3.1.0"
once_cell = "1.19.0"
parking_lot = "0.12.3"
percent-encoding = "2.3.1"
rand = "0.8.5"
regex = "1.10.6"
reqwest-tracing = "0.5.3"
rust_decimal = "1.35.0"
ryu = "1.0.18"
serde_qs = "0.13.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
smallvec = "1.13.2"
tracing = "0.1.40"
url = "2.5.2"

[dependencies.argon2]
version = "0.5.3"
features = ["std"]

[dependencies.async-openai]
version = "0.23.4"
optional = true

[dependencies.card-validate]
version = "2.4.0"
optional = true

[dependencies.cookie]
version = "0.18.1"
optional = true

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]

[dependencies.ctr]
version = "0.9.2"
optional = true

[dependencies.datafusion]
version = "41.0.0"
optional = true

[dependencies.dotenvy]
version = "0.15.7"
optional = true

[dependencies.fluent]
version = "0.16.1"
optional = true

[dependencies.flume]
version = "0.11.0"
optional = true

[dependencies.http02]
package = "http"
version = "0.2.12"
optional = true

[dependencies.intl-memoizer]
version = "0.5.2"
optional = true

[dependencies.jwt-simple]
version = "0.12.9"
optional = true
default-features = false
features = ["pure-rust"]

[dependencies.metrics]
version = "0.23.0"
optional = true

[dependencies.metrics-exporter-prometheus]
version = "0.15.3"
optional = true
default-features = false
features = ["http-listener"]

[dependencies.minijinja]
version = "2.1.1"
optional = true
features = ["debug", "loader"]

[dependencies.opendal]
version = "0.48.0"
optional = true
default-features = false
features = ["layers-tracing"]

[dependencies.phonenumber]
version = "0.3.6"
optional = true

[dependencies.random_word]
version = "0.4.3"
optional = true

[dependencies.rauthy-client]
version = "0.4.0"
optional = true

[dependencies.regorus]
version = "0.2.2"
optional = true
default-features = false
features = [
    "arc",
    "base64",
    "base64url",
    "crypto",
    "glob",
    "hex",
    "http",
    "jsonschema",
    "regex",
    "semver",
    "time",
    "urlquery",
    "uuid",
]

[dependencies.reqwest]
version = "0.12.5"
default-features = false
features = [
    "blocking",
    "gzip",
    "json",
    "multipart",
]

[dependencies.reqwest-middleware]
version = "0.3.3"
features = ["json", "multipart"]

[dependencies.sentry]
version = "0.34.0"
optional = true

[dependencies.sentry-tracing]
version = "0.34.0"
optional = true

[dependencies.serde]
version = "1.0.206"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.124"
features = ["raw_value"]

[dependencies.sm3]
version = "0.4.2"
optional = true

[dependencies.sm4]
version = "0.5.1"
optional = true

[dependencies.sqids]
version = "0.4.1"
optional = true

[dependencies.sqlx]
version = "0.8.0"
optional = true
default-features = false
features = [
    "chrono",
    "json",
    "rust_decimal",
    "uuid",
]

[dependencies.tera]
version = "1.20.0"
optional = true

[dependencies.toml]
version = "0.8.19"
default-features = false
features = ["parse"]

[dependencies.tracing-appender]
version = "0.2.3"
optional = true
features = ["parking_lot"]

[dependencies.tracing-log]
version = "0.2.0"
optional = true

[dependencies.tracing-subscriber]
version = "0.3.18"
optional = true
default-features = false
features = [
    "ansi",
    "json",
    "local-time",
    "parking_lot",
]

[dependencies.unic-langid]
version = "0.9.5"
optional = true

[dependencies.utoipa]
version = "4.2.3"
optional = true
features = ["non_strict_integers", "url", "uuid"]

[dependencies.uuid]
version = "1.10.0"
features = [
    "fast-rng",
    "serde",
    "v4",
    "v7",
]

[dev-dependencies]
anyhow = "1.0.86"
arrayvec = "0.7.4"
base64-simd = "0.8.0"
criterion = "0.5.1"
data-encoding = "2.5.0"
libsm = "0.6.0"
sm3 = "0.4.2"
sonic-rs = "0.3.10"
tinyvec = { version = "1.8.0", features = ["alloc"] }
uuid-simd = "0.8.0"

[[bench]]
name = "criterion_main"
harness = false
