[package]
name = "zino-derive"
description = "Derived traits for zino."
version = "0.22.1"
rust-version = "1.75"
edition = "2021"
license = "MIT"
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino-derive"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.74"

[dependencies.zino-core]
path = "../zino-core"
version = "0.25.1"
features = ["orm"]
