[package]
name = "zino-derive"
description = "Derived traits for zino."
version = "0.23.1"
rust-version = "1.80"
edition = "2021"
license = "MIT"
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino-derive"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = "2.0.77"

[dependencies.zino-core]
path = "../zino-core"
version = "0.26.1"
features = ["orm"]
