[package]
name = "zino-dioxus"
description = "Dioxus components for zino."
version = "0.7.2"
rust-version = "1.75"
edition = "2021"
license = "MIT"
categories = ["gui", "network-programming", "web-programming"]
keywords = ["zino", "dioxus", "components"]
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino-dioxus"
readme = "README.md"

[features]
default = []
clipboard = ["dioxus-sdk/clipboard"]

[dependencies]
dioxus = "0.5.6"
dioxus-core = "0.5.6"
dioxus-hooks = "0.5.6"
dioxus-router = "0.5.6"
rust_decimal = "1.35.0"
smallvec = "1.13.2"

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]

[dependencies.comrak]
version = "0.27.0"
default-features = false
features = ["shortcodes", "syntect"]

[dependencies.dioxus-free-icons]
version = "0.8.6"
features = ["bootstrap", "font-awesome-solid"]

[dependencies.dioxus-sdk]
version = "0.5.0"
optional = true

[dependencies.tokio]
version = "1.39.3"
features = ["time"]

[dependencies.uuid]
version = "1.10.0"
features = [
    "fast-rng",
    "serde",
    "v4",
    "v7",
]

[dependencies.zino-core]
path = "../zino-core"
version = "0.25.2"
