[package]
name = "zino-dioxus"
description = "Dioxus components for zino."
version = "0.10.1"
rust-version = "1.80"
edition = "2021"
license = "MIT"
categories = ["gui", "network-programming", "web-programming"]
keywords = ["zino", "dioxus", "components"]
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino-dioxus"
readme = "README.md"

[package.metadata.docs.rs]
features = []
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
desktop = ["dep:dioxus-desktop"]
clipboard = ["dioxus-sdk/clipboard"]

[dependencies]
dioxus = "0.6.0"
dioxus-core = "0.6.0"
dioxus-hooks = "0.6.0"
dioxus-html = "0.6.0"
dioxus-router = "0.6.0"
image = "0.25.5"
rust_decimal = "1.36.0"
smallvec = "1.13.2"
tracing = "0.1.41"

[dependencies.chrono]
version = "0.4.39"
features = ["serde"]

[dependencies.comrak]
version = "0.31.0"
default-features = false
features = ["shortcodes", "syntect"]

[dependencies.dioxus-desktop]
version = "0.6.0"
optional = true

[dependencies.dioxus-free-icons]
version = "0.9.0"
features = ["bootstrap", "font-awesome-solid"]

[dependencies.dioxus-sdk]
version = "0.6.0"
optional = true

[dependencies.tokio]
version = "1.42.0"
features = [
    "parking_lot",
    "rt-multi-thread",
    "time",
]

[dependencies.uuid]
version = "1.10.0"
features = [
    "fast-rng",
    "serde",
    "v4",
    "v7",
]

[dependencies.zino-core]
path = "../zino-core"
version = "0.29.0"
features = ["runtime-tokio"]
