[package]
name = "zino-extra"
description = "Extra utilities for zino."
version = "0.4.2"
rust-version = "1.75"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino-extra"
readme = "README.md"

[package.metadata.docs.rs]
features = ["full"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
all-formats = ["format", "format-pdf"]
cache = ["dep:lru", "dep:parking_lot"]
default = []
format = []
format-pdf = ["format", "dep:printpdf"]
full = ["all-formats", "cache"]

[dependencies.lru]
version = "0.12.4"
optional = true

[dependencies.parking_lot]
version = "0.12.3"
optional = true

[dependencies.printpdf]
version = "0.7.0"
optional = true

[dependencies.zino-core]
path = "../zino-core"
version = "0.25.2"
