[package]
name = "zino-http"
description = "HTTP requests and responses for zino."
version = "0.1.1"
rust-version = "1.80"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino-http"
readme = "README.md"

[package.metadata.docs.rs]
features = [
    "auth",
    "cookie",
    "i18n",
    "jwt",
    "metrics",
    "openapi",
    "view",
]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
auth = ["zino-auth"]
cookie = ["dep:cookie", "reqwest/cookies", "zino-core/cookie"]
i18n = ["dep:fluent", "dep:intl-memoizer", "dep:unic-langid"]
http02 = ["dep:http02"]
jwt = ["dep:jwt-simple", "auth", "zino-auth/jwt"]
metrics = ["dep:metrics", "zino-core/metrics"]
openapi = ["zino-core/openapi"]
view = ["zino-core/view"]

[dependencies]
bytes = "1.9.0"
etag = "4.0.0"
futures = "0.3.31"
http = "1.2.0"
mime_guess = "2.0.5"
multer = "3.1.0"
percent-encoding = "2.3.1"
regex = "1.11.1"
ryu = "1.0.18"
serde_qs = "0.13.0"
smallvec = "1.13.2"
tracing = "0.1.41"
url = "2.5.4"

[dependencies.cookie]
version = "0.18.1"
optional = true

[dependencies.fluent]
version = "0.16.1"
optional = true

[dependencies.http02]
package = "http"
version = "0.2.12"
optional = true

[dependencies.intl-memoizer]
version = "0.5.2"
optional = true

[dependencies.jwt-simple]
version = "0.12.10"
optional = true
default-features = false
features = ["pure-rust"]

[dependencies.metrics]
version = "0.24.1"
optional = true

[dependencies.reqwest]
version = "0.12.9"
default-features = false
features = [
    "blocking",
    "gzip",
    "json",
    "multipart",
]

[dependencies.serde]
version = "1.0.215"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.133"
features = ["raw_value"]

[dependencies.toml]
version = "0.8.19"
default-features = false
features = ["parse"]

[dependencies.unic-langid]
version = "0.9.5"
optional = true

[dependencies.zino-auth]
path = "../zino-auth"
version = "0.1.1"
optional = true

[dependencies.zino-core]
path = "../zino-core"
version = "0.29.1"
features = ["http-client"]