[package]
name = "zino-model"
description = "Domain models for zino."
version = "0.22.1"
rust-version = "1.75"
edition = "2021"
license = "MIT"
categories = ["web-programming", "database"]
keywords = ["web", "model", "orm", "schema"]
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino-model"
readme = "README.md"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = [
    "namespace",
    "visibility",
    "tags",
    "owner-id",
    "maintainer-id",
    "edition",
]
namespace = []
visibility = []
tags = []
owner-id = []
maintainer-id = []
edition = []

[dependencies]
tracing = "0.1.40"

[dependencies.serde]
version = "1.0.206"
features = ["derive"]

[dependencies.sqlx]
version = "0.8.0"
default-features = false

[dependencies.strum]
version = "0.26.3"
features = ["derive"]

[dependencies.zino-core]
path = "../zino-core"
version = "0.25.1"
features = [
    "jwt",
    "orm",
    "validator-email",
]

[dependencies.zino-derive]
path = "../zino-derive"
version = "0.22.1"
