[package]
name = "zino-router"
description = "A flexible router for zino."
version = "0.0.1"
rust-version = "1.75"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/photino/zino"
repository = "https://github.com/photino/zino"
documentation = "https://docs.rs/zino-router"
readme = "README.md"

[dependencies]
