[package]
name = "zino-rpc"
description = "RPC support for zino."
version = "0.0.1"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/photino/zino"
repository = "https://github.com/photino/zino"
documentation = "https://docs.rs/zino-rpc"
readme = "README.md"

[dependencies]
