[package]
name = "zino-server"
description = "A HTTP server for zino."
version = "0.0.1"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/photino/zino"
repository = "https://github.com/photino/zino"
documentation = "https://docs.rs/zino-server"
readme = "README.md"

[dependencies]
