[package]
name = "zino"
description = "Next-generation framework for composable applications in Rust."
version = "0.25.1"
rust-version = "1.80"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming::http-server"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino"
readme = "README.md"

[package.metadata.docs.rs]
features = [
    "axum",
    "i18n",
    "jwt",
    "oidc",
    "opa",
    "orm",
]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
actix = [
    "dep:actix-cors",
    "dep:actix-files",
    "dep:actix-web",
    "dep:futures",
    "dep:tracing-actix-web",
    "utoipa-rapidoc/actix-web",
    "zino-core/http02",
    "zino-core/openapi",
    "zino-core/runtime-tokio",
]
axum = [
    "dep:async-trait",
    "dep:axum",
    "dep:futures",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "utoipa-rapidoc/axum",
    "zino-core/openapi",
    "zino-core/runtime-tokio",
]
dioxus = [
    "dep:dioxus",
    "dep:tokio",
    "dioxus-router",
]
dioxus-desktop = [
    "dep:dioxus-desktop",
    "dep:image",
    "dioxus",
    "zino-core/runtime-tokio",
]
dioxus-ssr = [
    "dep:axum",
    "dep:dioxus-ssr",
    "dep:futures",
    "dioxus",
    "dioxus-router/ssr",
    "zino-core/runtime-tokio",
]
debug = ["zino-core/debug"]
default = ["logger"]
i18n = ["zino-core/i18n"]
jwt = ["zino-core/jwt"]
logger = ["zino-core/tracing-log", "zino-core/tracing-subscriber"]
ntex = [
    "dep:futures",
    "dep:ntex",
    "dep:ntex-files",
    "zino-core/runtime-tokio",
]
oidc = ["zino-core/oidc"]
opa = ["zino-core/opa"]
orm = ["zino-core/orm"]

[dependencies]
cfg-if = "1.0"
serde_json = "1.0.128"
tracing = "0.1.40"

[dependencies.actix-cors]
version = "0.7.0"
optional = true

[dependencies.actix-files]
version = "0.6.6"
optional = true

[dependencies.actix-web]
version = "4.9.0"
optional = true
default-features = false
features = ["compress-gzip"]

[dependencies.async-trait]
version = "0.1.83"
optional = true

[dependencies.axum]
version = "0.7.6"
optional = true
default-features = false
features = [
    "http1",
    "matched-path",
    "original-uri",
    "tokio",
]

[dependencies.dioxus]
version = "0.5.6"
optional = true

[dependencies.dioxus-desktop]
version = "0.5.6"
optional = true

[dependencies.dioxus-router]
version = "0.5.6"
optional = true

[dependencies.dioxus-ssr]
version = "0.5.6"
optional = true
features = ["incremental"]

[dependencies.futures]
version = "0.3.30"
optional = true

[dependencies.image]
version = "0.25.2"
optional = true

[dependencies.ntex]
version = "2.5.0"
optional = true
default-features = false
features = ["compress", "tokio"]

[dependencies.ntex-files]
version = "2.0.0"
optional = true

[dependencies.tokio]
version = "1.40.0"
optional = true
features = [
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "signal",
]

[dependencies.tower]
version = "0.5.1"
optional = true
features = ["timeout"]

[dependencies.tower-http]
version = "0.6.1"
optional = true
features = [
    "add-extension",
    "catch-panic",
    "compression-gzip",
    "cors",
    "decompression-gzip",
    "fs",
    "set-header",
    "trace",
]

[dependencies.tracing-actix-web]
version = "0.7.12"
optional = true
features = ["opentelemetry_0_23"]

[dependencies.utoipa-rapidoc]
version = "4.0.0"
optional = true

[dependencies.zino-core]
path = "../zino-core"
version = "0.26.1"
