[package]
name = "zino"
description = "Next-generation framework for composable applications in Rust."
version = "0.26.1"
rust-version = "1.80"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming::http-server"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino"
readme = "README.md"

[package.metadata.docs.rs]
features = [
    "axum",
    "i18n",
    "jwt",
    "oidc",
    "opa",
    "orm",
]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
actix = ["dep:zino-actix"]
axum = ["dep:zino-axum"]
dioxus = ["zino-dioxus"]
dioxus-desktop = ["dioxus", "zino-dioxus/desktop"]
debug = ["zino-core/debug"]
default = ["logger"]
i18n = ["zino-core/i18n"]
jwt = ["zino-core/jwt"]
logger = ["zino-core/tracing-log", "zino-core/tracing-subscriber"]
ntex = ["dep:zino-ntex"]
oidc = ["zino-core/oidc"]
opa = ["zino-core/opa"]
orm = ["zino-axum?/orm", "zino-core/orm"]

[dependencies]
cfg-if = "1.0"
serde_json = "1.0.132"

[dependencies.zino-actix]
path = "../zino-actix"
version = "0.1.0"
optional = true

[dependencies.zino-axum]
path = "../zino-axum"
version = "0.1.0"
optional = true

[dependencies.zino-core]
path = "../zino-core"
version = "0.27.0"

[dependencies.zino-dioxus]
path = "../zino-dioxus"
version = "0.9.1"
optional = true

[dependencies.zino-ntex]
path = "../zino-ntex"
version = "0.1.0"
optional = true
