[package]
name = "zino-actix"
description = "Integrations with actix-web for zino."
version = "0.6.0"
rust-version = "1.80"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino-actix"
readme = "README.md"

[features]
orm = ["zino-orm", "zino-orm/openapi"]

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
futures = { workspace = true }
tracing = { workspace = true }
zino-core = { workspace = true, features = ["runtime-tokio"] }
zino-http = { workspace = true, features = ["http02"] }
zino-orm = { workspace = true, optional = true }
zino-openapi = { workspace = true }

[dependencies.actix-web]
version = "4.9.0"
default-features = false
features = ["compress-gzip"]

[dependencies.tracing-actix-web]
version = "0.7.15"
features = ["opentelemetry_0_27", "uuid_v7"]

[dependencies.utoipa-rapidoc]
version = "6.0.0"
features = ["actix-web"]

[lints]
workspace = true
