[package]
name = "zino-actix"
description = "Integrations with actix-web for zino."
version = "0.6.1"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
documentation = "https://docs.rs/zino-actix"
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[features]
orm = ["zino-orm", "zino-orm/openapi"]

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
futures = { workspace = true }
tracing = { workspace = true }
zino-core = { workspace = true, features = ["runtime-tokio"] }
zino-http = { workspace = true, features = ["http02"] }
zino-orm = { workspace = true, optional = true }
zino-openapi = { workspace = true }

[dependencies.actix-web]
version = "4.9.0"
default-features = false
features = ["compress-gzip"]

[dependencies.tracing-actix-web]
version = "0.7.16"
features = ["opentelemetry_0_28", "uuid_v7"]

[dependencies.utoipa-rapidoc]
version = "6.0.0"
features = ["actix-web"]

[lints]
workspace = true
