[package]
name = "zino-ai"
description = "LLM services for zino."
version = "0.0.1"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
readme = "README.md"
documentation = "https://docs.rs/zino-ai"
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
async-stream = "0.3.6"
futures.workspace = true
ordered-float = "5.0.0"
reqwest.workspace = true
schemars = "1.0.4"
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.16"
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
