[package]
name = "zino-ai"
description = "LLM services for zino."
version = "0.0.1"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
readme = "README.md"
documentation = "https://docs.rs/zino-ai"
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
bytes.workspace = true
chrono = { version = "0.4", features = ["serde"] }
futures.workspace = true
minijinja = "2.12.0"
reqwest = { workspace = true, features = ["stream", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.16"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
uuid.workspace = true

[lints]
workspace = true
