[package]
name = "zino-amis"
description = "UI generator for amis."
version = "0.4.0"
rust-version = "1.80"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino-amis"
readme = "README.md"

[dependencies]
hyper-staticfile = "0.10.1"
phf = "0.11.3"
serde_json = "1.0.139"
tracing = "0.1.41"

[dependencies.hyper]
version = "1.6.0"
features = ["http1", "server"]

[dependencies.hyper-util]
version = "0.1.10"
features = ["http1", "tokio"]

[dependencies.tokio]
version = "1.43.0"
features = [
    "net",
    "rt-multi-thread",
    "time",
]

[dependencies.toml]
version = "0.8.20"
default-features = false
features = ["parse"]

[dependencies.zino-core]
path = "../zino-core"
version = "0.32.0"
features = ["tracing-subscriber"]
