[package]
name = "zino-amis"
description = "UI generator for amis."
version = "0.6.0"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
readme = "README.md"
documentation = "https://docs.rs/zino-amis"
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
hyper-staticfile = "0.10.1"
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
zino-core = { workspace = true, features = ["tracing-subscriber"] }

[dependencies.hyper]
version = "1.6.0"
features = ["http1", "server"]

[dependencies.hyper-util]
version = "0.1.11"
features = ["http1", "tokio"]

[dependencies.phf]
version = "0.11.3"
features = ["macros"]

[lints]
workspace = true
