[package]
name = "zino-auth"
description = "Authentication and authorization for zino."
version = "0.4.0"
rust-version = "1.80"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino-auth"
readme = "README.md"

[package.metadata.docs.rs]
features = [
    "jwt",
    "ldap",
    "oidc",
    "opa",
    "sqids",
]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
crypto-sm = ["zino-core/crypto-sm"]
jwt = ["dep:jwt-simple", "regorus?/jwt"]
ldap = ["dep:simple-ldap"]
oidc = ["dep:rauthy-client"]
opa = ["regorus"]
sqids = ["dep:sqids"]

[dependencies]
cfg-if = "1.0"
hmac = "0.12.1"
parking_lot = "0.12.3"
rand = "0.9.0"
tracing = "0.1.41"

[dependencies.jwt-simple]
version = "0.12.11"
optional = true
default-features = false
features = ["pure-rust"]

[dependencies.simple-ldap]
version = "2.1.1"
optional = true

[dependencies.rauthy-client]
version = "0.6.1"
optional = true

[dependencies.regorus]
version = "0.2.7"
optional = true
default-features = false
features = [
    "arc",
    "base64",
    "base64url",
    "crypto",
    "glob",
    "hex",
    "http",
    "jsonschema",
    "regex",
    "semver",
    "time",
    "urlquery",
    "uuid",
]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.sm3]
version = "0.4.2"
optional = true

[dependencies.sqids]
version = "0.4.2"
optional = true

[dependencies.toml]
version = "0.8.20"
default-features = false

[dependencies.zino-core]
path = "../zino-core"
version = "0.32.0"
